--- a/Students/Shesterin_Aleksei/task2/src/public/index.html
+++ b/Students/Shesterin_Aleksei/task2/src/public/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<div class="d-flex">
+    <form action="#">
+        <fieldset>
+            <input type="radio" name="burger" id="big"><label for="big">Большой бургер (100 rub., 40 cal)</label><br>
+            <input type="radio" name="burger" id="small"><label for="small">Маленький бургер (50 rub., 20 cal)</label>
+        </fieldset>
+        <fieldset>
+            <input type="radio" name="add" id="cheese"><label for="cheese">С сыром (+10 rub., +20 cal)</label><br>
+            <input type="radio" name="add" id="salad"><label for="salad">С салатом (+20 rub., +5 cal)</label><br>
+            <input type="radio" name="add" id="potato"><label for="potato">С картофелем (+15 rub., +10 cal)</label>
+        </fieldset>
+        <fieldset>
+            <label>
+                <input type="checkbox" id="addspice">Добавить специи? <br>
+            </label>
+            <input type="radio" name="spice" id="mayon"><label for="mayon">С майонезом (+15 rub., +10 cal)</label><br>
+            <input type="radio" name="spice" id="spicy"><label for="spicy">Со специями (+15 rub., +0 cal)</label>
+        </fieldset>
+        <fieldset>
+            Summary: <span id="summary"></span>
+        </fieldset>
+    </form>
+</div>
+<script src="../script/js/main.js"></script>
 </body>
 </html>
