shop code completed

--- a/Students/MikhailPetukhov/project/src/public/index.html
+++ b/Students/MikhailPetukhov/project/src/public/index.html
@@ -16,7 +16,7 @@
                 </button>
             </form>
             <button class="btn-cart">Корзина</button>
-            <div class="cart-block ">
+            <div class="cart-block hidden">
                 <div class="d-flex">
                     <strong class="d-block">Всего товаров</strong> <div id="quantity"></div>
                 </div>
@@ -26,7 +26,7 @@
                 </div>
                 <hr>
                 <div class="d-flex">
-                    <strong class="d-block">Общая ст-ть:</strong> <div id="price"></div>
+                    <strong class="d-block">Общая ст-ть:</strong> <div id="amount"></div>
                 </div>
             </div>
         </div>
@@ -34,8 +34,6 @@
     <main>
         <div class="products"></div>
     </main>
-    
-<!--     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script> -->
+
 </body>
 </html>
