HW lesson 4 HOTFIX

--- a/Students/sharapov2701/others/lesson_4/3.html
+++ b/Students/sharapov2701/others/lesson_4/3.html
@@ -7,59 +7,36 @@
 
     <script>
 
-        function validateForm() {
-            let fields = document.forms.contact_form.elements;
-            for (let i = 0; i < fields.length; i++) {
-                switch (fields[i].name) {
-                    case ('name'):
-                        if (!(/[а-я]/ig.test(fields[i].value))) {
-                            fields[i].classList.add('error');
-                            return false;
-                        } else {
-                            fields[i].classList.remove('error');
-                        }
-                        break;
-                    case ('phone'):
-                        if(!(/\+7\(\d{3}\)\d{3}-\d{4}/g.test(fields[i].value))) {
-                            fields[i].classList.add('error');
-                            return false;
-                        } else {
-                            fields[i].classList.remove('error');
-                        }
-                        break;
-                    case ('email'):
-                        if(!(/^([a-z0-9_\.-]+)@([a-z0-9_\.-]+)\.([a-z\.]{2,6})$/ig.test(fields[i].value))) {
-                            fields[i].classList.add('error');
-                            return false;
-                        } else {
-                            fields[i].classList.remove('error');
-                        }
-                        break;
-                    case ('text'):
-                        if(!(/.+/ig.test(fields[i].value))) {
-                            fields[i].classList.add('error');
-                            return false;
-                        } else {
-                            fields[i].classList.remove('error');
-                        }
-                        break;
-                    default:
-                        return true;
-                }
+        function check_field(field, r) {
+            if (!(r.test(field.value))) {
+                field.classList.add('error');
+                return false;
+            } else {
+                field.classList.remove('error');
+                return true;
             }
+        }
+
+        function validate () {
+            let fields = document.forms.contact_form;
+            let name = check_field(fields["name"], /[а-я]/i);
+            let phone = check_field(fields["phone"], /\+7\(\d{3}\)\d{3}-\d{4}/);
+            let email = check_field(fields["email"], /^([a-z0-9_\.-]+)@([a-z0-9_\.-]+)\.([a-z\.]{2,6})$/i);
+            let text = check_field(fields["text"], /.+/i);
+            return (name && phone && email & text) ? true : false;
         }
 
     </script>
 
     <style>
         .error {
-            background-color: red;
+            border-color: red;
         }
     </style>
 
 </head>
 <body>
-    <form name="contact_form" onsubmit="return validateForm()">
+    <form name="contact_form" onsubmit="return validate()">
         <table>
             <tr>
                 <td>Имя: </td>
