--- a/Students/GrigorevFedor/Project/src/public/index.html
+++ b/Students/GrigorevFedor/Project/src/public/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/normalize.css">
     <title>Document</title>
 </head>
 <body>
@@ -19,7 +17,7 @@
                 </button>
             </form>
             <button class="btn-cart">Cart</button>
-            <div class="cart-block ">
+            <div class="cart-block hidden">
                 <div class="d-flex">
                     <strong class="d-block">Всего товаров</strong> <div id="quantity"></div>
                 </div>
@@ -39,6 +37,5 @@
     </main>
     
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
 </body>
 </html>
