--- a/Students/MikhailPetukhov/project/src/public/index.html
+++ b/Students/MikhailPetukhov/project/src/public/index.html
@@ -7,34 +7,59 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <div class="logo">BestKidsWear</div>
-        <div class="cart">
-            <form action="#" class="search-form">
-                <input type="text" class="search-field">
-                <button class="btn-search">
-                    <i class="fas fa-search"></i>
-                </button>
-            </form>
-            <button class="btn-cart">Корзина</button>
-            <div class="cart-block hidden">
-                <div class="d-flex">
-                    <strong class="d-block">Всего товаров</strong> <div id="quantity"></div>
-                </div>
-                <hr>
-                <div class="cart-items">
-                    
-                </div>
-                <hr>
-                <div class="d-flex">
-                    <strong class="d-block">Общая ст-ть:</strong> <div id="amount"></div>
+    <div id="app">
+        <header>
+            <div class="logo">BestKidsWear</div>
+            <div class="cart">
+                <form action="#" class="search-form">
+                    <input type="text" class="search-field">
+                    <button class="btn-search">
+                        <i class="fas fa-search" @click="filterItems"></i>
+                    </button>
+                </form>
+                <button class="btn-cart" @click="showBasket = !showBasket">{{ computedLabel }}</button>
+                <div class="cart-block" v-show="showBasket">
+                    <div class="d-flex">
+                        <strong class="d-block">Всего товаров</strong> <div id="quantity">{{ computedSummary.qua }}</div>
+                    </div>
+                    <hr>
+                    <div class="cart-items">
+                         <div class="cart-item" v-for="item of basketItems" :key="item.id">
+                            <img :src="item.image_link" :alt="item.style">
+                            <div class="product-desc">
+                                <p class="product-title">{{item.name}}</p>
+                                <p class="product-quantity">{{item.quantity}}</p>
+                                <p class="product-single-price">{{item.price}}</p>
+                            </div>
+                            <div class="right-block">
+                                <button name="del-btn" class="del-btn">&times;</button>
+                            </div>
+                        </div>                       
+                    </div>
+                    <hr>
+                    <div class="d-flex">
+                        <strong class="d-block">Общая ст-ть:</strong> <div id="amount">{{ computedSummary.amount }}</div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </header>
-    <main>
-        <div class="products"></div>
-    </main>
+        </header>
+        <main>
+            <div class="products">
+                <div class="product-item" v-for="item of filteredItems" :key="item.id">
+                    <img :src="item.image_link" :alt="item.style">
+                    <div class="desc">
+                        <h1>{{item.name}}</h1>
+                        <h1>{{item.style}}</h1>
+                        <p>{{item.price}}</p>
+                        <button class="buy-btn" name="buy-btn" @click="add(item)">
+                            Купить
+                        </button>
+                    </div>
+                </div>                
 
+            </div>
+        </main>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
 </body>
 </html>
