--- a/Students/MikhailPetukhov/project/src/public/index.html
+++ b/Students/MikhailPetukhov/project/src/public/index.html
@@ -32,7 +32,7 @@
                                 <p class="product-single-price">{{item.price}}</p>
                             </div>
                             <div class="right-block">
-                                <button name="del-btn" class="del-btn">&times;</button>
+                                <button name="del-btn" class="del-btn" @click="remove(item)">&times;</button>
                             </div>
                         </div>                       
                     </div>
