--- a/Students/Shesterin_Aleksei/task5/src/public/shop.html
+++ b/Students/Shesterin_Aleksei/task5/src/public/shop.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/normalize.css">
     <title>Document</title>
 </head>
 <body>
@@ -21,7 +22,7 @@
                 </button>
             </form>
             <button class="btn-cart">Cart</button>
-            <div class="cart-block">
+            <div class="cart-block" v-for="">
                 <div class="d-flex">
                     <strong class="d-block">Всего товаров</strong>
                     <div id="quantity"></div>
@@ -39,14 +40,25 @@
         </div>
     </header>
     <main>
-        <div class="products"></div>
+        <div class="products">
+            <div class="product-item" v-for="d in data" :key="d.id_product">
+                <!--<img src="https://placehold.it/300x200" alt="${this.item.product_name}">-->
+                <div class="image">
+                    <img :src="d.img" width="200" alt=""></div>
+                <div class="desc">
+                    <h1>{{ d.product_name }}</h1>
+                    <p>{{ d.price }}</p>
+                    <button
+                            class="buy-btn"
+                            name="buy-btn">Купить
+                    </button>
+                </div>
+            </div>
+        </div>
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
-            integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP"
-            crossorigin="anonymous"></script>
-    <script src="../script/main.js"></script>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="../script/main.js"></script>
 </body>
 </html>
