--- a/Students/Shesterin_Aleksei/task5/src/public/shop.html
+++ b/Students/Shesterin_Aleksei/task5/src/public/shop.html
@@ -21,20 +21,30 @@
                     <i class="fas fa-search"></i>
                 </button>
             </form>
-            <button class="btn-cart">Cart</button>
-            <div class="cart-block" v-for="">
+            <button class="btn-cart" v-on:click="hideCart=!hideCart">Cart</button>
+            <div class="cart-block" v-show="hideCart">
                 <div class="d-flex">
                     <strong class="d-block">Всего товаров</strong>
-                    <div id="quantity"></div>
+                    <div id="quantity">{{ totalQuantity }}</div>
                 </div>
                 <hr>
                 <div class="cart-items">
+                    <div class="cart-item" v-for="c in cartItems" :key="c.id_product">
+                        <div class="product-desc">
+                            <p class="product-title">{{ c.product_name }}</p>
+                            <p class="product-quantity">{{ c.quantity }}</p>
+                            <p class="product-single-price">{{ parseFloat(c.price) * c.quantity }}</p>
+                        </div>
+                        <div class="right-block">
+                            <button name="del-btn" class="del-btn" v-on:click="removeCartItem(c)">&times;</button>
+                        </div>
+                    </div>
 
                 </div>
                 <hr>
                 <div class="d-flex">
                     <strong class="d-block">Общая ст-ть:</strong>
-                    <div id="price"></div>
+                    <div id="price">{{ totalPrice }}</div>
                 </div>
             </div>
         </div>
@@ -50,13 +60,12 @@
                     <p>{{ d.price }}</p>
                     <button
                             class="buy-btn"
-                            name="buy-btn">Купить
+                            name="buy-btn" v-on:click="addToCart(d)">Купить
                     </button>
                 </div>
             </div>
         </div>
     </main>
-
 </div>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="../script/main.js"></script>
